--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "chcp 65001 && nodemon --watch main.js --exec electron ."
   },
   "keywords": [
     "electron",
