--- a/package.json
+++ b/package.json
@@ -14,8 +14,48 @@
   ],
   "author": "lbc",
   "license": "ISC",
+  "build": {
+    "productName": "electron-desktop",
+    "appId": "for-li",
+    "copyright": "li-build",
+    "directories": {
+      "output": "dist"
+    },
+    "nsis": {
+      "oneClick": false,
+      "perMachine": true,
+      "allowElevation": true,
+      "allowToChangeInstallationDirectory": true,
+      "installerIcon": "./src/icon/OA.ico",
+      "uninstallerIcon": "./src/icon/OA.ico",
+      "installerHeaderIcon": "./src/icon/OA.ico",
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "li-build"
+    },
+    "win": {
+      "icon": "./src/icon/OA.ico",
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "ia32",
+            "x64"
+          ]
+        }
+      ]
+    },
+    "mac": {
+      "icon": "./src/icon/OA.ico"
+    },
+    "linux": {
+      "icon": "./src/icon/OA.ico"
+    }
+  },
+  "dependencies": {
+    "adm-zip": "^0.5.9"
+  },
   "devDependencies": {
-    "adm-zip": "^0.5.9",
     "electron": "^17.2.0",
     "electron-builder": "^22.14.13"
   }
